--- a/Energia.html
+++ b/Energia.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Energia</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
-  <script src="ProjetoIntegrador.js"></script>
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
 </head>
 
@@ -20,7 +19,7 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
   </div>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
+    <h1><strong class="textosTitulo"><em> Energia </em> </strong></h1>
     <br>
     <p>
       A energia é uma palavra muito utilizada no nosso vocabulário, contudo muitas pessoas não compreendem seu
