--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -13,49 +13,9 @@
 <body>
   <div class="cabeçalho">
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
-  </div>
-  <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
-    <br>
-    <p>
-      A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
-      elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023). A eletricidade pode
-      ser dividida entre fenômenos eletrostáticos e eletrodinâmicos, referentes às cargas em repouso e em movimento. A
-      eletricidade também pode ser compreendida como “todos os efeitos que as cargas elétricas produzem sobre a matéria”
-      (HELERBROCK, 2023).
-
-      <br>
-    </p>
-    <br>
-    <p>
-      Os elétrons possuem a carga fundamental, que corresponde à menor carga elétrica possível, equivalente a cerca de
-      1,6.10^19 C. Os elétrons podem ser conduzidos quando são agitados ou estão sob a ação de um campo elétrico
-      externo, isso gera as correntes elétricas e todos os seus fenômenos relacionados (HELERBROCK, 2023).
-      <br>
-    </p>
-    <br>
-    É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
-    (HELERBROCK,2023). Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica, que
-    trata-se da energia elétrica consumida por um dispositivo a cada segundo. A energia potencial elétrica é comumente
-    medida em KWh, que é uma unidade utilizada principalmente pelas companhias de distribuição de energia elétrica, e
-    além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J.
-
-
-    <br>
-    <p>
-    </p>
-    <br>
-    <img src="Imagens/OIG (1).jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
-    <legend style="text-align: center;"><a
-        href="https://www.bing.com/images/create/zeus--thunder/6445a481b46741e8889a08fc1d68ba2b?id=vKgb%2ffDZBHfGTVxRoNOc0Q%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&ajaxhist=0&ajaxserp=0">
-        Imagem Dísponivel
-        Aqui</a>
-    </legend>
-  </div>
-  <div class="esquerdo">
-    <h1>Tópicos</h1>
-    <br>
-
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+<h1 style="text-align: center;">Tópicos</h1>
     <a href="Ondas.html"><button type="button" class="btn">
         <strong>Ondas</strong>
         <div id="container-stars">
@@ -152,7 +112,66 @@
         </div>
       </button></a>
     <br>
+    <a href="Bibliografia.html"><button type="button" class="btn">
+      <strong>Bibliografia</strong>
+      <div id="container-stars">
+        <div id="stars"></div>
+      </div>
+
+      <div id="glow">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </button></a>
+  <br>
+
+    </div>
+    
+    <div id="main">
+      <button class="openbtn" onclick="openNav()">☰ Menu</button>  
+ 
+    </div>
   </div>
+  </div>
+  <div class="conteudo">
+    <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
+    <br>
+    <p>
+      A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
+      elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023). A eletricidade pode
+      ser dividida entre fenômenos eletrostáticos e eletrodinâmicos, referentes às cargas em repouso e em movimento. A
+      eletricidade também pode ser compreendida como “todos os efeitos que as cargas elétricas produzem sobre a matéria”
+      (HELERBROCK, 2023).
+
+      <br>
+    </p>
+    <br>
+    <p>
+      Os elétrons possuem a carga fundamental, que corresponde à menor carga elétrica possível, equivalente a cerca de
+      1,6.10^19 C. Os elétrons podem ser conduzidos quando são agitados ou estão sob a ação de um campo elétrico
+      externo, isso gera as correntes elétricas e todos os seus fenômenos relacionados (HELERBROCK, 2023).
+      <br>
+    </p>
+    <br>
+    É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
+    (HELERBROCK,2023). Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica, que
+    trata-se da energia elétrica consumida por um dispositivo a cada segundo. A energia potencial elétrica é comumente
+    medida em KWh, que é uma unidade utilizada principalmente pelas companhias de distribuição de energia elétrica, e
+    além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J.
+
+
+    <br>
+    <p>
+    </p>
+    <br>
+    <img src="Imagens/OIG (1).jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <legend style="text-align: center;"><a
+        href="https://www.bing.com/images/create/zeus--thunder/6445a481b46741e8889a08fc1d68ba2b?id=vKgb%2ffDZBHfGTVxRoNOc0Q%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&ajaxhist=0&ajaxserp=0">
+        Imagem Dísponivel
+        Aqui</a>
+    </legend>
+  </div>
+  
   <div class="rodape"></div>
 
 </body>
