--- a/Mecanica.html
+++ b/Mecanica.html
@@ -13,6 +13,125 @@
 <body>
   <div class="cabeçalho">
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+<h1 style="text-align: center;">Tópicos</h1>
+    <a href="Ondas.html"><button type="button" class="btn">
+        <strong>Ondas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br>
+    <a href="Leis De Newton.html">
+      <button type="button" class="btn">
+        <strong>Leis de Newton</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Mecanica.html">
+      <br><button type="button" class="btn">
+        <strong>Mecânica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Energia.html">
+      <br><button type="button" class="btn">
+        <strong>Energia</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Eletricidade.html">
+      <br><button type="button" class="btn">
+        <strong>Eletricidade</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="CorrentesEletricas.html">
+      <br><button type="button" class="btn">
+        <strong>Correntes Elétricas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="TermoFisica.html">
+      <br><button type="button" class="btn">
+        <strong>Termofísica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br><a href="Optica.html"><button type="button" class="btn">
+        <strong>Óptica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br>
+    <a href="Bibliografia.html"><button type="button" class="btn">
+      <strong>Bibliografia</strong>
+      <div id="container-stars">
+        <div id="stars"></div>
+      </div>
+
+      <div id="glow">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </button></a>
+  <br>
+
+    </div>
+    
+    <div id="main">
+      <button class="openbtn" onclick="openNav()">☰ Menu</button>  
+ 
+    </div>
+  </div>
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
@@ -145,107 +264,7 @@
   </div>
   
 
-  <div class="esquerdoMecanica">
-    <h1>Tópicos</h1>
-    <br>
 
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-  </div>
   <div class="rodape"></div>
 
 </body>
