--- a/Energia.html
+++ b/Energia.html
@@ -200,7 +200,7 @@
     </p>
     <br>
     <img src="Imagens/quente e frio  educador.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
-    <legend style="text-align: center;"><a href=" <img src=" Imagens/energia.webp" alt="Foto Satelite" width="600px"
+    <legend style="text-align: center;"><a href=" img src="Imagens/energia.webp" alt="Foto Satelite" width="600px"
         style="margin-left: 110px;">
         <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
             Imagem Dísponivel
