--- a/index.html
+++ b/index.html
@@ -130,12 +130,14 @@
     </div>
     
     <div id="main">
-      <button class="openbtn" onclick="openNav()">☰ Menu</button>  
- 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
+        class="MenuB">Menu </div></span> 
+        
     </div>
   </div>
   <div class="conteudo">
-    <h1> Conteúdo</h1>
+    <h1 class="center"> Conteúdo</h1>
+    <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non aut amet beatae eos sapiente distinctio
       praesentium, tempora aperiam minima consectetur, nam dignissimos atque? Reiciendis labore quis illum dignissimos,
       omnis impedit.</p>
