mudança sambaqui e adicionamento de imagem

--- a/sambaqui.html
+++ b/sambaqui.html
@@ -21,7 +21,7 @@
 
     <p>Figura 1 – Mapa dos sambaquis</p>
 
-    <img src="" alt="foto mapa">
+    <img src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
     <br>
 
     <h2>O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
