--- a/index.html
+++ b/index.html
@@ -126,7 +126,17 @@
       </div>
     </button></a>
   <br>
+  <a href="sambaqui.html"><button type="button" class="btn">
+    <strong>Sambaqui</strong>
+    <div id="container-stars">
+      <div id="stars"></div>
+    </div>
 
+    <div id="glow">
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </div>
+  </button></a>
     </div>
     
     <div id="main">
