--- a/sambaqui.html
+++ b/sambaqui.html
@@ -31,7 +31,24 @@
     
 
 
-
+    <div class="cabeçalho">
+      <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+  
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+  <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+  
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
   <a href="Ondas.html"><button type="button" class="btn">
     <strong>Ondas</strong>
     <div id="container-stars">
