--- a/sambaqui.html
+++ b/sambaqui.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sambaqui</title>
-  <link rel="stylesheet" href="ProjetoIntegrador.css">
+  <title>Física Na Mente</title>
+  <link href="ProjetoIntegrador.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
+  <script src="index.js"></script>
 </head>
+
 <body>
   <div class="cabeçalho">
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
@@ -14,152 +18,136 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 <h1 style="text-align: center;">Tópicos</h1>
-<br>
-<a href="Ondas.html"><button type="button" class="btn">
-  <strong>Ondas</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
+    <a href="Ondas.html"><button type="button" class="btn">
+        <strong>Ondas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<br>
-<a href="Leis De Newton.html">
-<button type="button" class="btn">
-  <strong>Leis de Newton</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<a href="Mecanica.html">
-<br><button type="button" class="btn">
-  <strong>Mecânica</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<a href="Energia.html">
-<br><button type="button" class="btn">
-  <strong>Energia</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<a href="Eletricidade.html">
-<br><button type="button" class="btn">
-  <strong>Eletricidade</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<a href="CorrentesEletricas.html">
-<br><button type="button" class="btn">
-  <strong>Correntes Elétricas</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<a href="TermoFisica.html">
-<br><button type="button" class="btn">
-  <strong>Termofísica</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<br><a href="Optica.html"><button type="button" class="btn">
-  <strong>Óptica</strong>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button></a>
-<br>
-<a href="sambaqui.html"><button type="button" class="btn">
-<strong>Sambaqui</strong>
-<div id="container-stars">
-  <div id="stars"></div>
-</div>
-
-<div id="glow">
-  <div class="circle"></div>
-  <div class="circle"></div>
-</div>
-</button></a>
-<br>
-<a href="Bibliografia.html"><button type="button" class="btn">
-<strong>Bibliografia</strong>
-<div id="container-stars">
-  <div id="stars"></div>
-</div>
-
-<div id="glow">
-  <div class="circle"></div>
-  <div class="circle"></div>
-</div>
-</button></a>
-<br>
-
-</div>
-
-
-<div class="rodape"></div>
-
-<h1><strong>Sambaqui</strong></h1>
-  <br>
-  <h2><strong>“O que é Sambaqui?”</strong></h2>
-  <br>
-  <p>Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
-  <br>
-  <h2><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
-    indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
-    tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
-    etc.”</strong></h2>
-
-    <p>Figura 1 – Mapa dos sambaquis</p>
-
-    <img src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
     <br>
+    <a href="Leis De Newton.html">
+      <button type="button" class="btn">
+        <strong>Leis de Newton</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-    <h2>O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Mecanica.html">
+      <br><button type="button" class="btn">
+        <strong>Mecânica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Energia.html">
+      <br><button type="button" class="btn">
+        <strong>Energia</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Eletricidade.html">
+      <br><button type="button" class="btn">
+        <strong>Eletricidade</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="CorrentesEletricas.html">
+      <br><button type="button" class="btn">
+        <strong>Correntes Elétricas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="TermoFisica.html">
+      <br><button type="button" class="btn">
+        <strong>Termofísica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br><a href="Optica.html"><button type="button" class="btn">
+        <strong>Óptica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
     <br>
-    <p>Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+    <a href="Bibliografia.html"><button type="button" class="btn">
+      <strong>Bibliografia</strong>
+      <div id="container-stars">
+        <div id="stars"></div>
+      </div>
+
+      <div id="glow">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </button></a>
+  <br>
+  <a href="sambaqui.html"><button type="button" class="btn">
+    <strong>Sambaqui</strong>
+    <div id="container-stars">
+      <div id="stars"></div>
+    </div>
+
+    <div id="glow">
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </div>
+  </button></a>
+    </div>
+    
+    <div id="main">
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
+        class="MenuB">Menu </div></span> 
+        
+    </div>
+  </div>
+
+  <div class="rodape"></div>
 
 </body>
+
 </html>
