--- a/sambaqui.html
+++ b/sambaqui.html
@@ -146,6 +146,30 @@
     </div>
   </div>
 
+  <h1><strong>Sambaqui</strong></h1>
+ <br>
+ <h2><strong>“O que é Sambaqui?”</strong></h2>
+ <br>
+ <p>Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
+ <br>
+ <h2><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
+   indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
+   tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
+   etc.”</strong></h2>
+
+
+   <p>Figura 1 – Mapa dos sambaquis</p>
+
+
+   <img src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
+   <br>
+
+
+   <h2>O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
+   <br>
+   <p>Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+
+
   <div class="rodape"></div>
 
 </body>
