--- a/sambaqui.html
+++ b/sambaqui.html
@@ -9,6 +9,9 @@
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
   <script src="index.js"></script>
+  <link rel="stylesheet" href="ProjetoIntegrador.css">
+  <link rel="stylesheet" href="sambaqui.css">
+
 </head>
 
 <body>
@@ -146,28 +149,28 @@
     </div>
   </div>
 
-  <h1><strong>Sambaqui</strong></h1>
+  <h1 class="all"><strong>Sambaqui</strong></h1>
  <br>
- <h2><strong>“O que é Sambaqui?”</strong></h2>
+ <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
  <br>
- <p>Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
+ <p class="all">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
  <br>
- <h2><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
+ <h2 class="all"><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
    indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
    tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
    etc.”</strong></h2>
 
 
-   <p>Figura 1 – Mapa dos sambaquis</p>
+   <p class="all">Figura 1 – Mapa dos sambaquis</p>
 
 
-   <img src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
+   <img class="all" src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
    <br>
 
 
-   <h2>O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
+   <h2 class="all">O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
    <br>
-   <p>Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+   <p class="all">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
 
 
   <div class="rodape"></div>
