--- a/sambaqui.html
+++ b/sambaqui.html
@@ -149,6 +149,12 @@
     </div>
   </div>
 
+  <style>
+    div {
+      text-align: center;
+    }
+  </style>
+  
   <h1 class="all"><strong>Sambaqui</strong></h1>
  <br>
  <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
