--- a/sambaqui.html
+++ b/sambaqui.html
@@ -149,6 +149,8 @@
     </div>
   </div>
 
+ <div>
+
   <style>
     div {
       text-align: center;
@@ -180,6 +182,8 @@
 
 
   <div class="rodape"></div>
+
+ </div>
 
 </body>
 
