--- a/Mecanica.html
+++ b/Mecanica.html
@@ -126,11 +126,12 @@
   <br>
 
     </div>
-    
     <div id="main">
-      <button class="openbtn" onclick="openNav()">☰ Menu</button>  
- 
-    </div>
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
+        class="MenuB">Menu </div></span> 
+
+    </div>  
+  
   </div>
   </div>
   <div class="conteudo">
