--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -128,8 +128,9 @@
     </div>
     
     <div id="main">
-      <button class="openbtn" onclick="openNav()">☰ Menu</button>  
- 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
+        class="MenuB">Menu </div></span> 
+
     </div>
   </div>
   </div>
